# gtest

./: meson.build  upstream.wrap
googlemock/: meson.build
googletest/: meson.build
